v2.0.6 (XXXX-XX-XX)
-------------------

* fixed issue #835: arangosh doesn't show correct database name


v2.0.5 (2014-04-21)
-------------------

* Fixed a caching problem in IE JS Shell

* added cancelation for async jobs

* upgraded to new gyp for V8

* new Windows installer


v2.0.4 (2014-04-14)
-------------------

* fixed cluster authentication front-end issues for Firefox and IE, there are
  still problems with Chrome


v2.0.3 (2014-04-14)
-------------------

* fixed AQL optimizer bug

* fixed front-end issues

* added password change dialog


v2.0.2 (2014-04-06)
-------------------

* during cluster startup, do not log (somewhat expected) connection errors with
  log level error, but with log level info

* fixed dashboard modals

* fixed connection check for cluster planning front end: firefox does 
  not support async:false

* document how to persist a cluster plan in order to relaunch an existing
  cluster later

* added REST API method HTTP GET `/_api/job/job-id` to query the status of an
  async job without potentially fetching it from the list of done jobs

* fixed non-intuitive behaviour in jobs API: previously, querying the status
  of an async job via the API HTTP PUT `/_api/job/job-id` removed a currently 
  executing async job from the list of queryable jobs on the server.
  Now, when querying the result of an async job that is still executing, 
  the job is kept in the list of queryable jobs so its result can be fetched
  by a subsequent request.

* improve documentation of db._create and explain the rules and
  limitations following from the choice of shardKeys for sharded
  collections with more than one shard


v2.0.1 (2014-03-31)
-------------------

* make ArangoDB not send back a `WWW-Authenticate` header to a client in case the
  client sends the `X-Omit-WWW-Authenticate` HTTP header.

  This is done to prevent browsers from showing their built-in HTTP authentication 
  dialog for AJAX requests that require authentication.