@@ -176,6 +176,12 @@ namespace triagens {
         int renameCollection (struct TRI_json_s const*);
 
 ////////////////////////////////////////////////////////////////////////////////
+/// @brief changes the properties of a collection, based on the JSON provided
+////////////////////////////////////////////////////////////////////////////////
+    
+        int changeCollection (struct TRI_json_s const*);
+
+////////////////////////////////////////////////////////////////////////////////
 /// @brief apply a single marker from the continuous log
 ////////////////////////////////////////////////////////////////////////////////
 
